--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <noscript>
-    You need to enable JavaScript to run this app.
+    Sorry, Sitant only works if JavaScript is enabled.
   </noscript>
   <div id="root"></div>
   <!--
